starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__arithmetic_precedence.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\n1 + 2 * 3 - 4"
---
Spanned {
    node: Binary {
        op: Subtract,
        left: Spanned {
            node: Binary {
                op: Add,
                left: Spanned {
                    node: Literal(
                        Integer(
                            IntegerLiteral {
                                digits: "1",
                                radix: Decimal,
                            },
                        ),
                    ),
                    span: 0..1,
                },
                right: Spanned {
                    node: Binary {
                        op: Multiply,
                        left: Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "2",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 4..5,
                        },
                        right: Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "3",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 8..9,
                        },
                    },
                    span: 4..9,
                },
            },
            span: 0..9,
        },
        right: Spanned {
            node: Literal(
                Integer(
                    IntegerLiteral {
                        digits: "4",
                        radix: Decimal,
                    },
                ),
            ),
            span: 12..13,
        },
    },
    span: 0..13,
}
