starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__block.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\n{ let mut a = 1; a = a + 1; }\n"
---
Spanned {
    node: Block(
        Block {
            statements: [
                VariableDeclaration {
                    mutable: true,
                    name: Identifier {
                        name: "a",
                        span: Some(
                            10..11,
                        ),
                    },
                    ty: None,
                    value: Spanned {
                        node: Literal(
                            Integer(
                                1,
                            ),
                        ),
                        span: 14..15,
                        comments_before: [],
                        comments_after: [],
                    },
                },
                Assignment {
                    target: Identifier {
                        name: "a",
                        span: Some(
                            17..18,
                        ),
                    },
                    value: Spanned {
                        node: Binary {
                            op: Add,
                            left: Spanned {
                                node: Identifier(
                                    Identifier {
                                        name: "a",
                                        span: Some(
                                            21..22,
                                        ),
                                    },
                                ),
                                span: 21..23,
                                comments_before: [],
                                comments_after: [],
                            },
                            right: Spanned {
                                node: Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 25..26,
                                comments_before: [],
                                comments_after: [],
                            },
                        },
                        span: 21..26,
                        comments_before: [],
                        comments_after: [],
                    },
                },
            ],
            tail_expression: None,
        },
    ),
    span: 0..30,
    comments_before: [],
    comments_after: [],
}
