starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__emit_no_args.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\n// Emit ping\nemit Ping()\n"
---
Spanned {
    node: Emit {
        event: Identifier {
            name: "Ping",
            span: Some(
                18..22,
            ),
        },
        args: [],
    },
    span: 0..25,
    comments_before: [
        Comment(
            0..13,
        ),
    ],
    comments_after: [],
}
