starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__emit_with_args.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nemit Transfer(from, to, amount)"
---
Spanned {
    node: Emit {
        event: Identifier {
            name: "Transfer",
            span: Some(
                5..13,
            ),
        },
        args: [
            Spanned {
                node: Identifier(
                    Identifier {
                        name: "from",
                        span: Some(
                            14..18,
                        ),
                    },
                ),
                span: 14..18,
                comments_before: [],
                comments_after: [],
            },
            Spanned {
                node: Identifier(
                    Identifier {
                        name: "to",
                        span: Some(
                            20..22,
                        ),
                    },
                ),
                span: 20..22,
                comments_before: [],
                comments_after: [],
            },
            Spanned {
                node: Identifier(
                    Identifier {
                        name: "amount",
                        span: Some(
                            24..30,
                        ),
                    },
                ),
                span: 24..30,
                comments_before: [],
                comments_after: [],
            },
        ],
    },
    span: 0..31,
    comments_before: [],
    comments_after: [],
}
