starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__field_access_chain.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nstate.position.x"
---
Spanned {
    node: FieldAccess {
        target: Spanned {
            node: FieldAccess {
                target: Spanned {
                    node: ScopedName(
                        [
                            Identifier {
                                name: "state",
                                span: 0..5,
                            },
                        ],
                    ),
                    span: 0..5,
                },
                field: Identifier {
                    name: "position",
                    span: 6..14,
                },
            },
            span: 0..14,
        },
        field: Identifier {
            name: "x",
            span: 15..16,
        },
    },
    span: 0..16,
}
