starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__field_access_then_call.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nobj.method(x)"
---
Spanned {
    node: Call {
        callee: Spanned {
            node: FieldAccess {
                target: Spanned {
                    node: ScopedName(
                        [
                            Identifier {
                                name: "obj",
                                span: 0..3,
                            },
                        ],
                    ),
                    span: 0..3,
                },
                field: Identifier {
                    name: "method",
                    span: 4..10,
                },
            },
            span: 0..10,
        },
        args: [
            Spanned {
                node: ScopedName(
                    [
                        Identifier {
                            name: "x",
                            span: 11..12,
                        },
                    ],
                ),
                span: 11..12,
            },
        ],
    },
    span: 0..13,
}
