starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__function_call_chained_with_field.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nfoo().bar"
---
Spanned {
    node: FieldAccess {
        target: Spanned {
            node: Call {
                callee: Spanned {
                    node: ScopedName(
                        [
                            Identifier {
                                name: "foo",
                                span: 0..3,
                            },
                        ],
                    ),
                    span: 0..3,
                },
                args: [],
            },
            span: 0..5,
        },
        field: Identifier {
            name: "bar",
            span: 6..9,
        },
    },
    span: 0..9,
}
