starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__function_call_no_args.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nfoo()"
---
Spanned {
    node: Call {
        callee: Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "foo",
                        span: 0..3,
                    },
                ],
            ),
            span: 0..3,
        },
        args: [],
    },
    span: 0..5,
}
