starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__function_call_with_args.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nadd(1, 2)"
---
Spanned {
    node: Call {
        callee: Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "add",
                        span: 0..3,
                    },
                ],
            ),
            span: 0..3,
        },
        args: [
            Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "1",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 4..5,
            },
            Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "2",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 7..8,
            },
        ],
    },
    span: 0..9,
}
