starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__integer_literal.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\n42"
---
Spanned {
    node: Literal(
        Integer(
            42,
        ),
    ),
    span: 0..2,
    comments_before: [],
    comments_after: [],
}
